test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: frontend
  labels:
    app: test-client
spec:
  containers:
  - name: test-client
    image: nicolaka/netshoot
    command: ["/bin/bash"]
    args: ["-c", "while true; do sleep 30; done"]
